# financial-reconciliation-lakehouse

./: .gitignore  README.md  Untitled.ipynb  main.py  pyproject.toml
docker/: docker-compose.yml  smoke-test.sh
docker/connect/: postgres-connector.json
docker/postgres/: init.sql
just-test/: preview_payment_output.py  summarize_payment_simulation.py  trying_faker.py
src/ingestion/producers/: payment_producer.py
tests/smoke/: smoke_producer_test.py
