[project]
name = "financial-reconciliation-lakehouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka>=2.14.0",
    "faker>=40.15.0",
    "jupyterlab>=4.5.6",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
]
